Implement CRUD features for Product, ProductCategory, and Profile

--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -4,9 +4,13 @@
 <ul class="navbar-nav ms-auto">
     @if (signInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Logout</a>
-        </li>
+<li class="nav-item">
+    <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+        <button type="submit" class="btn btn-link nav-link text-dark" style="display:inline; padding:0; border:none; background:none;">Logout</button>
+        @Html.AntiForgeryToken()
+    </form>
+</li>
+
     }
     else
     {
