--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -22,7 +22,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="float-end">
-                <a asp-controller="Account" asp-action="VerifyEmail" class="text-decoration-none">
+                <a asp-controller="Account" asp-action="ChangePassword" class="text-decoration-none">
                     Forgot password?
                 </a>
             </div>
