--- a/wwwroot/css/account.css
+++ b/wwwroot/css/account.css
@@ -1,5 +1,5 @@
 ﻿.account-container {
-    background-image: url('../images/account-bg.jpg');
+    background-image: url('../images/bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
