update validation email

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,5 +1,7 @@
 @using Project1.ViewModels;
 @model RegisterViewModel;
+@await Html.PartialAsync("_Alerts")
+
 
 @{
     ViewData["Title"] = "Register";
